api regen to adopt after creation
